# AI_mental_health_therapist-agentic-ai-

./: .gitignore  README.md  frontend.py  pyproject.toml
backend/: ai_agent.py  main.py  test_location.py  tools.py
