[project]
name = "ai-mental-health-therapist-agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.126.0",
    "geopy>=2.4.1",
    "googlemaps>=4.10.0",
    "langchain>=1.2.0",
    "langchain-groq>=1.1.1",
    "langgraph>=1.0.5",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "streamlit>=1.52.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "twilio>=9.9.0",
    "uvicorn>=0.38.0",
]
